# Fantasy

./: .gitignore  CMakeLists.txt  README.md
3rd/glad/include/glad/: glad.h
3rd/glad/src/: glad.c
3rd/glfm/: CMakeLists.txt
3rd/glfw/include/GLFW/: glfw3.h
3rd/glfw/src/: input.c  win32_window.c
3rd/stb/: CMakeLists.txt  stb_vorbis.c
Fantasy/: CMakeLists.txt  main.cpp  main_android.cpp
Fantasy/3rd/glfm/src/: glfm_platform_android.c
Fantasy/3rd/stb/: CMakeLists.txt
Fantasy/asset/: tr.frag  tr.vert
Fantasy/assets/: tr.frag  tr.vert
Fantasy/client/: CMakeLists.txt  GameClient.cpp  GameClient.h
Fantasy/client/env/: Environment.cpp  Environment.h
Fantasy/client/env/gl/: GLEnv.cpp  GLEnv.h
Fantasy/client/input/: Input.cpp  Input.h
Fantasy/engine/: Application.cpp  Application.h  CMakeLists.txt  GameClient.cpp
Fantasy/engine/asset/: Asset.h  AssetsManager.cpp  AssetsManager.h  Mesh.cpp
Fantasy/engine/component/: Component.cpp  Component.h  MeshRender.cpp  MeshRender.h  Transform.h
Fantasy/engine/object/: GameObject.cpp
Fantasy/engine/scene/: Scene.h  TestScene.cpp  TestScene.h
Fantasy/engine/system/: Time.h  Window.cpp
Fantasy/engine/utils/: FileManager.cpp
Fantasy/env/: CMakeLists.txt  Environment.h  GLEnv.cpp
Fantasy/fantasy/: CMakeLists.txt  main.cpp
Fantasy/game/: CMakeLists.txt  GameClient.cpp
Fantasy/game/asset/: Asset.h  AssetsManager.cpp  AssetsManager.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h
Fantasy/game/component/: Camera.cpp  Camera.h  Component.cpp  Component.h  MeshFilter.cpp  MeshFilter.h  MeshRender.cpp  MeshRender.h  MoveController.cpp  MoveController.h  Transform.cpp  Transform.h
Fantasy/game/object/: CameraObject.cpp  CameraObject.h  Cube.cpp  Cube.h  GameObject.cpp  GameObject.h
Fantasy/game/scene/: Scene.cpp  Scene.h  TestScene.cpp  TestScene.h
Fantasy/game/system/: Display.cpp  Display.h  Input.cpp  Input.h  Time.cpp  Time.h  Window.cpp  Window.h
Fantasy/thread/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h
Fantasy/utils/: CMakeLists.txt  FileManager.cpp  FileManager.h  Utils.cpp  Utils.h
android/: settings.gradle
android/app/: build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
engine/: Application.cpp  Application.h  CMakeLists.txt
engine/asset/: AssetsManager.cpp  Material.h  Scene.cpp  Shader.cpp  Shader.h  Texture2D.cpp
engine/component/: Camera.cpp  MeshFilter.cpp  MeshFilter.h
engine/env/: Environment.h
engine/object/: CameraObject.h  Cube.cpp  Cube.h  GameObject.cpp  GameObject.h
engine/system/: AssetsManager.h  FileManager.cpp  FileManager.h  System.cpp  System.h  Window.h
engine/thread/: ThreadPool.h
engine/utils/: Utils.cpp
fantasy/: main.cpp  main_android.cpp
fantasy/component/: MoveController.cpp  MoveController.h
fantasy/scene/: TestScene.h
(+3 files in other folders)
