cmake_minimum_required(VERSION 3.10)
project(Fantasy)

set(CMAKE_CXX_STANDARD 14)
if (CMAKE_SYSTEM_NAME MATCHES "Android")
    include_directories(. 3rd/glm/include 3rd/glfm/include 3rd/stb)
    add_subdirectory(3rd/glfm)
else()
    set(CMAKE_EXE_LINKER_FLAGS -static)
    include_directories(. 3rd/glad/include 3rd/glfw/include 3rd/glm/include 3rd/stb)
    add_subdirectory(3rd/glfw)
    add_subdirectory(3rd/glad)
endif()
add_subdirectory(3rd/stb)
add_subdirectory(env)
add_subdirectory(game)
add_subdirectory(thread)
add_subdirectory(utils)

if (CMAKE_SYSTEM_NAME MATCHES "Android")
    add_library(Fantasy SHARED main_android.cpp)
else()
    file(COPY assets DESTINATION .)
    add_executable(Fantasy main.cpp)
endif()

if (CMAKE_SYSTEM_NAME MATCHES "Android")
    target_link_libraries(Fantasy env game thread utils stb glfm GLESv3)
else()
    target_link_libraries(Fantasy env game thread utils stb glad glfw)
endif()

